Implement SIMD accelleration for CRC32 on JVM for Java 26+